Fixes user layout issues

--- a/app/assets/stylesheets/application/models/_comment.css.sass
+++ b/app/assets/stylesheets/application/models/_comment.css.sass
@@ -33,3 +33,4 @@
     text-align:     right
     li
       display:      inline-block
+      margin:       0 .33ex
